--- a/supervisord.conf
+++ b/supervisord.conf
@@ -3,26 +3,26 @@ programs=tornado-8007,tornado-8008,tornado-send-email
 
 [program:tornado-8007]
 command=python app.py -port=8007
-directory=/home/suyn/program_klsw
+directory=/root/klsw/program_klsw
 autorestart=true
 redirect_stderr=true
-stdout_logfile=/home/suyn/program_klsw/internet_tornado_8007.log
+stdout_logfile=/root/klsw/internet_tornado_8007.log
 loglevel=info
 
 [program:tornado-8008]
 command=python app.py -port=8008
-directory=/home/suyn/program_klsw
+directory=/root/klsw
 autorestart=true
 redirect_stderr=true
-stdout_logfile=/home/suyn/program_klsw/internet_tornado_8008.log
+stdout_logfile=/root/klsw/internet_tornado_8008.log
 loglevel=info
 
 [program:tornado-send-email]
 command=celery -A celery_module worker -l info -c 5 -B
-directory=/home/suyn/program_klsw
-autorestart=false
+directory=/root/klsw
+autorestart=true
 redirect_stderr=true
-stdout_logfile=/home/suyn/program_klsw/celery_send_email.log
+stdout_logfile=/root/klsw/celery_send_email.log
 loglevel=info
 
 [supervisord]
